# TimeTableSchool

./: .gitignore  app.spec  pyinstaller.py  pyproject.toml  run_app.spec
data/example/: course.json  rooms.json  students.json  teachers.json
data/example/data_set_0/: course.json  courses.json  rooms.json  students.json  teachers.json
data/example/data_set_1/: course.json  rooms.json  students.json  teachers.json
data/example/data_set_2/: course.json  rooms.json  students.json  teachers.json
data/example/data_set_3/: course.json  rooms.json  students.json  teachers.json
data/example/data_set_4/: course.json  rooms.json  students.json  teachers.json
data/example/data_set_5/: course.json  rooms.json  students.json  teachers.json
data/example/data_set_6/: course.json  rooms.json  students.json  teachers.json
data/example/data_set_7/: course.json  rooms.json  students.json  teachers.json
tests/: test_course.py  test_json.py  test_room.py  test_slot.py  test_student.py  test_teacher.py  test_timetable.py
timetable/: SolutionCollector.py  TimeTable.py  app.py  data.json  generate_sample.py  gunicorn_config.py  populate_db.py  run_app.py  solver_helper.py  test_data_usage.py
timetable/data/: classrooms.json  courses.json  students.json  teachers.json
timetable/instance/: database.db
timetable/models/: Course.py  Room.py  Slot.py  Student.py  Teacher.py  __init__.py
timetable/static/: styles.css
timetable/templates/: assign.html  base.html  classrooms.html  courses.html  index.html  students.html  teacher_dashboard.html  teachers.html  timetable.html
(+8 files in other folders)
