[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "timetable"
version = "0.0.1"
description = "Package description"
authors = ["Lazar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pandas = "^2.0.0"
numpy = "^1.0"
ortools = "^9.10"
python-dotenv = "^1.0.0"
flask = "^3.0.3"
flask_sqlalchemy = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.setuptools]
packages = ["timetable"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
